// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store actionCreators should export actionCreators 1`] = `
Object {
  "payload": Object {
    "_id": "123",
    "firstname": "abc",
    "lastname": "def",
  },
  "type": "[Users] CREATE",
}
`;

exports[`store actionCreators should export actionCreators 2`] = `
Object {
  "payload": "123",
  "type": "[Users] DELETE",
}
`;

exports[`store actionCreators should export actionCreators 3`] = `
Object {
  "payload": Object {
    "_id": "123",
    "firstname": "abc",
    "lastname": "def",
  },
  "type": "[Users] UPDATE",
}
`;

exports[`store actionCreators should export actionCreators 4`] = `
Object {
  "payload": Array [
    Object {
      "_id": "456",
      "firstname": "hij",
      "lastname": "klm",
    },
    Object {
      "_id": "789",
      "firstname": "nop",
      "lastname": "qrs",
    },
  ],
  "type": "[Users] USERS UPDATED",
}
`;

exports[`store actions should export action types 1`] = `"[Users] CREATE"`;

exports[`store actions should export action types 2`] = `"[Users] UPDATE"`;

exports[`store actions should export action types 3`] = `"[Users] DELETE"`;

exports[`store actions should export action types 4`] = `"[Users] USERS UPDATED"`;
